[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Slasher.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/enemy/enemy.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 30, 22 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 30, 22 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 30, 22 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "squashed",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "stagger",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 0.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 0.5, 11 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15, 0.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 15, 11 )

[node name="Slasher" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11 )
frames = SubResource( 4 )
animation = "walk"
playing = true

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( -15, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 4

[node name="TopChecker" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -22.5 )
shape = SubResource( 5 )
one_way_collision = true

[node name="SidesChecker" type="Area2D" parent="."]
monitorable = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( -15.5, -11 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 15.5, -11 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 0, 0.5 )
shape = SubResource( 7 )

[node name="StaggerTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 8 )

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
[connection signal="timeout" from="StaggerTimer" to="." method="_on_StaggerTimer_timeout"]
